--- a/public/css/events-page.css
+++ b/public/css/events-page.css
@@ -3,5 +3,5 @@ header {
 }
 
 .events {
-    margin: 200px 0 120px;
+    margin: 216px 0 120px;
 }
